# handler/spicedb/delete_relation.go
@@ -10,18 +10,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// CreateRelation
-// @Summary Create a relationship in SpiceDB
-// @Description Creates a new relationship between a user and a resource in SpiceDB
+// DeleteRelation
+// @Summary Delete a relationship in SpiceDB
+// @Description Deletes an existing relationship between a user and a resource in SpiceDB
 // @Tags SpiceDB
 // @Accept json
 // @Produce json
-// @Param request body model.CreateRelationshipRequest true "Relationship creation request"
-// @Success 200 {object} helper.Response{data=string} "Relationship created successfully"
+// @Param request body model.CreateRelationshipRequest true "Relationship deletion request"
+// @Success 200 {object} helper.Response{data=string} "Relationship deleted successfully"
 // @Failure 400 {object} helper.ErrorResponse "Invalid request format or missing fields"
 // @Failure 500 {object} helper.ErrorResponse "Internal server error"
-// @Router /relation [post]
-func (h *SpiceDBHandler) CreateRelation(c *gin.Context) {
+// @Router /relation [delete]
+func (h *SpiceDBHandler) DeleteRelation(c *gin.Context) {
 	var req model.CreateRelationshipRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
 		log.Printf("Error binding request: %v", err)
@@ -32,7 +32,7 @@ func (h *SpiceDBHandler) CreateRelation(c *gin.Context) {
 		helper.SendErrorResponse(c.Writer, http.StatusBadRequest, []string{"Missing required fields in request"})
 		return
 	}
-	err := client.CreateRelationship(
+	err := client.DeleteRelationship(
 		req.Relation,
 		req.Username,
 		req.Resource,
@@ -46,5 +46,5 @@ func (h *SpiceDBHandler) CreateRelation(c *gin.Context) {
 
 	relationshipString := "user" + ":" + req.Username + "#" + req.Relation + "@" + req.Resource + ":" + req.ResourceID
 
-	helper.SendSuccessResponse(c.Writer, http.StatusOK, "Relationship Created successfully", relationshipString)
+	helper.SendSuccessResponse(c.Writer, http.StatusOK, "Relationship deleted successfully", relationshipString)
 }
